--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">nbcamp_assignment</string>
 
     <string name="nbk">내배캠동</string>
+    <string name="manner"> <u>매너온도</u> </string>
+    <string name="chat">채팅하기</string>
 </resources>
